# eda-ecommerce

./: .env  Cargo.toml  docker-compose.yml
catalog/: Cargo.toml
services/auth/: Cargo.toml  Dockerfile
services/auth/migrations/: 20240727072608_init.sql
services/auth/src/: env.rs  main.rs
services/catalog/: Cargo.toml  Dockerfile
services/catalog/src/: env.rs  main.rs
